fixed more tests